# shipping-rate-streamlit-app

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.app.yml  docker-compose.yml  pyproject.toml  requirements.txt
data/processed/: sample_processed.csv
data/samples/: example1_standard_headers.csv  example2_abbreviations.csv  example3_descriptive_headers.csv  example4_complex_case.csv
scripts/: entrypoint.sh
src/: __init__.py  app.py
src/models/: pydantic_models.py
src/services/: embeddings.py  llm_fallback.py  mapper.py
