[tool.poetry]
name = "shipping-rate-streamlit-app"
version = "0.1.0"
description = "A Streamlit application for analyzing shipping rates."
authors = ["Your Name <your.email@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
streamlit = "^1.0.0"
pandas = "^1.3.0"
matplotlib = "^3.4.0"
seaborn = "^0.11.0"
pydantic = "^1.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"